--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 PORT=3000
 NODE_ENV=development
-
+JWT_PRIVATE_KEY="asiasoajopaspasagsasaipsasast9sásaçsaskklaklasa"
 DATABASE_URL="postgresql://neondb_owner:npg_6aGNxZQKYXm1@ep-rough-surf-a4oxeq1z.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
