--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,8 @@ AWS_BUCKET_NAME="velas-api-storage"
 AWS_ENDPOINT="https://15335db1460e9b5121bf2e6813e43239.r2.cloudflarestorage.com"
 AWS_REGION="auto"
 AWS_BUCKET_PUBLIC_URL="https://pub-5a26fdbcb2504a28807e1fd77bd4c4a6.r2.dev"
+# E-mail / SMTP
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER="dresch666@gmail.com"
+SMTP_PASS="mrmanmcgmwbcdcxm"
