fix: change email, now for resend email.

--- a/.env.test
+++ b/.env.test
@@ -13,3 +13,5 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="dresch666@gmail.com"
 SMTP_PASS="mrmanmcgmwbcdcxm"
+RESEND_PRODUCTION=re_JATkdhGu_PTnyUycTkjTygb1qz8DW7kZ7
+MAIL_FROM=onboarding@resend.dev
