feat: add stripe payment gateway and clean arch integration

--- a/.env.test
+++ b/.env.test
@@ -15,3 +15,4 @@ SMTP_USER="dresch666@gmail.com"
 SMTP_PASS="mrmanmcgmwbcdcxm"
 RESEND_PRODUCTION=re_JATkdhGu_PTnyUycTkjTygb1qz8DW7kZ7
 MAIL_FROM=onboarding@resend.dev
+STRIPE_SECRET_KEY=
