--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
     "rxjs": "^7.8.1",
+    "stripe": "^20.1.0",
     "typeorm": "^0.3.27",
     "zod": "^4.1.13"
   },
